--- a/resources/netcore/Nuget.config
+++ b/resources/netcore/Nuget.config
@@ -8,6 +8,6 @@
     <clear /></disabledPackageSources>
   <config>
     <clear />
-    <add key="defaultPushSource" value="http://packages.conectcar.com:9000/repository/nuget-hosted/" />
+    <add key="defaultPushSource" value="" />
   </config>
 </configuration>
